2006-10-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_rectangles do_plot) src/graph3d.c (do_3dplot)
	src/graphics.h: Allow placement of rectangles in 3D (splot) regardless
	of view angle, but only if the rectangle position is given in screen
	coords. Placement in 2D and 3D "set view map" is unchanged.

2006-10-22  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graphics.c (plot_image_or_update_axes): Operator | is
	forbidden on real C99 booleans.  Use || instead.

	* src/datafile.c (df_readbinary): Operator | is forbidden on real
	C99 booleans.  Use || instead.

	* src/axis.c (setup_tics): Operator & is forbidden on real C99
	booleans.  Use && instead.

	* config/makefile.oww (WCFLAGS): Add -za99 to enable _Bool type in
	recent versions of OpenWatcom.
	(default): Mark .SYMBOLIC for wmake.
	(texticon.ico): Avoid endless rebuild by copying the generation
	command.

2006-10-21  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graph3d.c src/graphics.c src/save.c
	src/set.c src/show.c src/unset.c src/util3d.c:  Add option to specify
	plot margins as an absolute position on the canvas (screen).
		set {lrbt}margin screen <frac>
	
	* docs/gnuplot.doc demo/all.dem demo/html/index.save demo/margins.dem
	demo/html/Makefile: Add demo illustrating use of absolute margins to
	perfectly align 2D and 3D component plots within a multiplot.

2006-10-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Rework the summary displayed at the end of the
	'configure' script, so that it is more complete, useful, consistent and
	still readable.

2006-10-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.h src/parse.c src/parse.h src/plot2d.c src/plot3d.c:
	Implement a mechanism for iteration within a plot or splot command.
	    {s}plot for [<var>=<start>:<end>{:<incr>}] ...rest of plot clause...

	* docs/gnuplot.doc demo/iterate.dem demo/histograms.dem demo/all.dem: 