@@ -1,3 +1,8 @@
+2006-10-26  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
+
+	* src/graphics.c (place_rectangles): Fix missing brace in
+	yesterday's change.
+
 2006-10-25  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (place_rectangles do_plot) src/graph3d.c (do_3dplot)
